Adicionado o link da base de dados

--- a/src/Classification.ipynb
+++ b/src/Classification.ipynb
@@ -620,6 +620,13 @@
     "             columns=['Resultado das métricas %'],\n",
     "             index=['Acurácia', 'Validação cruzada', 'Recall'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "base de dados: https://www.kaggle.com/datasets/prathamtripathi/drug-classification"
+   ]
   }
  ],
  "metadata": {
